Fix display on Mobile phone.

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -41,9 +41,9 @@ body {
     flex: 1 0 auto;
     margin: 0 auto;
 
-    /* @media (max-width: 1024px) { */
-    /*   margin: 0; */
-    /* } */
+    @media (max-width: 1024px) {
+      margin: 0;
+    }
 
     > article.post-single {
 
